# WikipediaMultistreamExtractor

./: .flake8  .pre-commit-config.yaml  README.md  dev_requirements.txt  pyproject.toml  run_pylint.py
src/wikipedia_multistream_extractor/: __init__.py
