[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wikipedia_multistream_extractor"
version = "0.0.1"
authors = [
  { name="Bill Schumacher", email="34168009+BillSchumacher@users.noreply.github.com" },
]
description = "This is a simple application that extracts articles from Wikipedia backup files."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/BillSchumacher/WikipediaMultistreamExtractort"
"Bug Tracker" = "https://github.com/BillSchumacher/WikipediaMultistreamExtractor/issues"

[project.scripts]
wikipedia_multistream_extractor = "wikipedia_multistream_extractor:main"

[tool.hatch.build.targets.wheel.force-include]
"bin/wikipedia_multistream_extractor.py" = "wikipedia_multistream_extractor/__init__.py"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = ""

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"